# farswarm

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/data/: aapl_q4_2025.json  googl_q4_2025.json  meta_q4_2025.json  nvda_q4_2025.json  sample_event.json  tsla_q4_2025.json
benchmarks/data/stimuli/: aapl_q4_2025.txt  googl_q4_2025.txt  meta_q4_2025.txt  nvda_q4_2025.txt  tsla_q4_2025.txt
examples/: ab_testing.py  market_sentiment.py  misinformation.py  regime_change.py
farswarm/: __init__.py  cli.py  config.py
farswarm/agents/: factory.py  memory.py  profile.py
farswarm/analysis/: networks.py  report.py  sentiment.py  signals.py
farswarm/benchmark/: ground_truth.py  metrics.py  runner.py  visualize.py
farswarm/core/: llm.py  pipeline.py  stimulus.py  types.py
farswarm/encoders/: base.py  mock.py  registry.py  tribe_v2.py
farswarm/mapping/: archetypes.py  brain_atlas.py  compressor.py  engagement.py
farswarm/simulation/: actions.py  dynamics.py  engine.py
farswarm/web/: server.py
nolemming/: cli.py
nolemming/analysis/: sentiment.py
nolemming/core/: pipeline.py
nolemming/encoders/: mock.py
nolemming/mapping/: archetypes.py  engagement.py  population.py
nolemming/simulation/: engine.py
nolemming/viz/: dashboard.py  neural.py  swarm.py
scripts/: encode_stimuli.py  run_phase0.py
tests/: test_agents.py  test_analysis.py  test_llm.py  test_mapping.py  test_pipeline.py  test_simulation.py  test_types.py
